# cellforce-wasm-core

./: .gitignore  Cargo.toml  README.md
data/wasm/: cellforce_wasm_udf_examples.wasm
src/: errors.rs  lib.rs
src/runner/: datatypes.rs  loader.rs  mod.rs  runner_base.rs  scalar_udf_runner.rs
src/runner/binds/: mod.rs  wasm_ops.rs
tests/it/: main.rs  wasm_scalar_udf_runner.rs
